# ros-carla-bridge

Python/: scenario_runner.py  spawn_npc.py  waypoint_generator.py
Python/scenario/: scenario_10.json  scenario_11.json  scenario_12.json  scenario_15.json  scenario_8.json  scenario_9.json  scenario_test.json
Python/scenario_start/: scenario_1.json  scenario_11.json  scenario_2.json  scenario_3.json  scenario_4.json  scenario_5.json  scenario_6.json  scenario_7.json  scenario_8.json  scenario_9.json  scenario_meeting.json  scenario_meeting2.json  scenario_meeting3.json  scenario_meeting4.json  scenario_test.json
carla_player_publisher/: CMakeLists.txt  package.xml
carla_player_publisher/launch/: carla_player_publisher.launch
carla_player_publisher/src/: carla_player_publisher.py
carla_player_publisher_msg/: CMakeLists.txt  package.xml
carla_player_publisher_msg/msg/: TransformStampedArray.msg
carla_ros_bridge/launch/: carla_ros_bridge.launch
carla_spawn_objects/config/: customHGV.json  custombike.json  custommotorcycle.json  customtruck.json  customvan.json  ego.json  ego64.json  ego6416.json  ego_urp.json  npc.json  npcbenz.json  npctesla.json
